<resources>
    <string name="app_name">오늘여행</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--  StartFragment  -->
    <string name="start_select_region">지역 옵션 지정하기</string>
    <string name="start_start_btn">시작하기</string>
    <string name="start_title">오늘 여행을 시작해볼까요?</string>

    <string name="random_next">다음</string>

    <!--  RandomOptionFragment  -->
    <string name="option_choice_region">랜덤 옵션을 선택해주세요.</string>
    <string name="option_all_random">완전 랜덤</string>
    <string name="option_theme_random">테마별 랜덤</string>

    <!--  RandomThemeFragment  -->
    <string name="select_theme">어떤 테마 여행을 하고 싶으신가요?</string>
    <string name="theme_first">풀내음이\n가득한</string>
    <string name="theme_second">청량함이\n있는</string>
    <string name="theme_third">시간을 \n넘나드는</string>
    <string name="theme_fourth">근심이\n없어지는</string>
    <string name="theme_fifth">감각을\n자극하는</string>
    <string name="theme_sixth">활력이 \n넘치는</string>
    <string name="theme_seventh">예술이\n숨 쉬는</string>

    <string name="theme_title_random">가고 싶었던</string>
    <string name="theme_title_first">풀내음이 가득한</string>
    <string name="theme_title_second">청량함이 있는</string>
    <string name="theme_title_third">시간을 넘나드는</string>
    <string name="theme_title_fourth">근심이 없어지는</string>
    <string name="theme_title_fifth">감각을 자극하는</string>
    <string name="theme_title_sixth">활력이 넘치는</string>
    <string name="theme_title_seventh">예술이 숨 쉬는</string>

    <!--  RandomResultFragment  -->
    <string name="result_choice_region">선택된 지역은···\n두구두구두구!!</string>
    <string name="random_result_one_loading">지역 정보를 가져오는 중···</string>
    <string name="detail_image">상세 이미지</string>

    <!--  RecordActivity  -->
    <string name="record_title">여행 캘린더</string>
    <string name="record_sub_title">지금까지 <font color="#1355FF">%d개의 여행지</font>를 여행했어요!</string>
    <string name="record_chart_title">자주 방문한 여행지 <font color="#FFD15B"><b>TOP3</b></font></string>
    <string name="record_chart_empty">여행지를 방문해보세요!</string>
    <string name="record_list_empty">저장된 여행 기록이 없습니다!</string>

    <!--  RecordDetailActivity  -->
    <string name="record_detail_delete">삭제하기</string>

    <!--  PlaceDetailActivity  -->
    <string name="place_detail_add_to_path">경로에 추가하기</string>
    <string name="place_detail_remove_from_path">경로에서 빼기</string>
    <string name="place_detail_nearby">이 장소 근처 가볼만 한 곳</string>
    <string name="place_detail_no_nearby">이 장소 근처 정보가 없습니다</string>
    <string name="place_detail_my_memory">이 장소에서 나의 추억</string>
    <string name="place_detail_no_photo">이 장소에 저장한 사진이 없습니다</string>
    <string name="place_detail_expand_info">더보기</string>

    <!-- PlaceListFragment -->
    <string name="place_list_tourist_attraction">관광지</string>
    <string name="place_list_restaurant">음식점</string>
    <string name="place_list_cafe">카페</string>
    <string name="place_list_event">행사/축제</string>
    
    <string name="place_list_recommend_sub_title_cover">오늘 여행이 추천하는</string>
    <string name="place_list_recommend_sub_title_map">지도로 한 눈에 보기</string>
    <string name="place_list_recommend_title">랜덤 코스</string>

    <string name="place_list_recommend_sub_title_tourist_attraction">오늘의 랜덤 <font color="#FFD15B">관광지</font></string>
    <string name="place_list_recommend_sub_title_restaurant">오늘의 랜덤 <font color="#FFD15B">음식점</font></string>
    <string name="place_list_recommend_sub_title_cafe">오늘의 랜덤 <font color="#FFD15B">카페</font></string>
    <string name="place_list_recommend_sub_title_event">오늘의 랜덤 <font color="#FFD15B">행사/축제</font></string>

    <string name="place_list_recommend_tourist_attraction_no_result">관광지 정보가 없어\n추천을 제공하지 못했습니다</string>
    <string name="place_list_recommend_restaurant_no_result">음식점 정보가 없어\n추천을 제공하지 못했습니다</string>
    <string name="place_list_recommend_cafe_no_result">카페 정보가 없어\n추천을 제공하지 못했습니다</string>
    <string name="place_list_recommend_event_no_result">행사/축제 정보가 없어\n추천을 제공하지 못했습니다</string>

    <string name="place_list_recommend_add_all">코스 전체 경로에 담기</string>
    <string name="place_list_recommend_add_all_move">경로 화면으로 이동</string>

    <string name="place_list_recommend_add_all_toast">랜덤 코스가 경로에 담겼어요!</string>
    <string name="place_list_recommend_refresh_toast">랜덤 코스가 새로 추천되었어요!</string>

    <string name="place_list_tourist_attraction_no_result">네트워크/서버 오류로 인해\n관광지 정보를 불러오지 못했습니다\n<b>아래로 스와이프하여 다시 시도</b></string>
    <string name="place_list_restaurant_no_result">네트워크/서버 오류로 인해\n음식점 정보를 불러오지 못했습니다\n<b>아래로 스와이프하여 다시 시도</b></string>
    <string name="place_list_cafe_no_result">네트워크/서버 오류로 인해\n카페 정보를 불러오지 못했습니다\n<b>아래로 스와이프하여 다시 시도</b></string>
    <string name="place_list_event_no_result">네트워크/서버 오류로 인해\n행사/축제 정보를 불러오지 못했습니다\n<b>아래로 스와이프하여 다시 시도</b></string>

    <string name="place_list_more_tourist_attraction_no_result">관광지 더 불러오기 실패</string>
    <string name="place_list_more_restaurant_no_result">음식점 더 불러오기 실패</string>
    <string name="place_list_more_cafe_no_result">카페 더 불러오기 실패</string>
    <string name="place_list_more_event_no_result">행사/축제 더 불러오기 실패</string>

    <!-- RouteFragment -->
    <string name="route_list_title">내가 담은 여행지</string>
    <!-- SavePhotoFragment -->
    <string name="save_photo_title">장소별 추억 기록하기</string>

    <!--  Bottom Sheet  -->
    <string name="bottom_sheet_record_title">현재까지의 경로가 기록됩니다</string>
    <string name="bottom_sheet_record_description">지금까지의 경로는 기록 후 초기화되며\n기록 탭에서 확인 가능합니다</string>
    <string name="bottom_sheet_record_button">기록하기</string>
    <string name="record_finish">추억이 추가되었습니다!</string>

    <string name="bottom_sheet_random_title">새로운 여행을 떠나보세요!</string>
    <string name="bottom_sheet_random_description">지금까지의 경로는 초기화됩니다.</string>
    <string name="bottom_sheet_random_button">랜덤 돌리기</string>

    <!--  Alert Dialog  -->
    <string name="alert_dialog_delete_title">여행 기록을 삭제하시겠습니까?</string>
    <string name="alert_dialog_delete_description">삭제한 여행 기록은 복구할 수 없습니다</string>
    <string name="alert_dialog_positive">삭제</string>
    <string name="alert_dialog_negative">취소</string>

    <!--  Select Region Fragment  -->
    <string name="select_region_description">여행하고 싶은 지역을 \n직접 선택해보세요!</string>
    <string name="select_region_all">전체 선택</string>
    <string name="seoul">서울</string>
    <string name="incheon">인천</string>
    <string name="jeonbuk">전북</string>
    <string name="jeonnam">전남</string>
    <string name="gyeongbuk">경북</string>
    <string name="gyeongnam">경남</string>
    <string name="chungbuk">충북</string>
    <string name="chungnam">충남</string>
    <string name="gangwon">강원</string>
    <string name="daegu">대구</string>
    <string name="busan">부산</string>
    <string name="daejeon">대전</string>
    <string name="jeju">제주</string>
    <string name="gyeonggi">경기</string>
    <string name="gwangju">광주</string>
    <string name="ulsan">울산</string>

    <string name="map_daejeon_pathdata">m522.3,1147.2c0.2,-0.2 0.5,-0.3 0.7,-0.5 0,0 0,0 0,0 0,0 0,0 0,0 0.3,-0.2 0.6,-0.4 0.8,-0.6 0.2,-0.1 0.4,-0.3 0.6,-0.4 0.2,-0.2 0.5,-0.4 0.7,-0.6 0.2,-0.2 0.5,-0.4 0.7,-0.6 0.2,-0.2 0.4,-0.4 0.6,-0.5 0.3,-0.2 0.5,-0.4 0.8,-0.7 0.2,-0.2 0.4,-0.3 0.6,-0.5 0.3,-0.3 0.6,-0.5 0.9,-0.8 0.2,-0.2 0.4,-0.4 0.6,-0.6 0.3,-0.3 0.6,-0.6 0.9,-0.9 0.2,-0.2 0.4,-0.4 0.6,-0.7 0.3,-0.3 0.5,-0.6 0.8,-0.9 0.4,-0.4 0.7,-0.8 1.1,-1.2 0.1,-0.1 0.2,-0.3 0.3,-0.4 0.5,-0.6 1,-1.1 1.4,-1.7 1.9,-2.3 3.7,-4.8 5.3,-7.3 1.2,-1.9 2.4,-3.8 3.5,-5.8 3.2,-5.8 5.6,-11.8 6.8,-17.1l3.7,-16.3c0.3,-1.4 0.6,-2.8 0.9,-4.2 0.2,-0.9 0.3,-1.9 0.5,-2.8 0.2,-1.4 0.4,-2.8 0.6,-4.2 0.1,-0.9 0.2,-1.8 0.3,-2.7 0,-0.4 0.1,-0.9 0.1,-1.4 0.1,-1.4 0.2,-2.7 0.2,-4 0,-0.9 0,-1.7 0,-2.5 0,-0.8 -0,-1.6 -0,-2.4 -0.1,-3.5 -0.5,-6.6 -1.1,-8.9 -0.1,-0.5 -0.3,-1 -0.5,-1.4 -0.3,-0.7 -0.5,-1.2 -0.9,-1.7 -3.3,-5 -11.7,-9.2 -18.6,-9.4 -7.7,-0.2 -15.1,-5.7 -16.5,-12.2 -1.2,-5.5 -8.5,-9.9 -16.4,-9.7 -0.1,0 -0.2,0 -0.2,0 -1.4,0 -3,0.4 -4.8,0.9 -0.7,0.2 -1.4,0.5 -2.1,0.8 -3.2,1.4 -6.7,3.6 -10.1,6.3 -0.5,0.4 -1,0.9 -1.6,1.3 -0.1,0.1 -0.2,0.2 -0.3,0.3 -0.4,0.3 -0.8,0.7 -1.2,1.1 -0.1,0.1 -0.2,0.2 -0.4,0.3 -0.4,0.3 -0.7,0.7 -1.1,1.1 -0.1,0.1 -0.2,0.3 -0.4,0.4 -0.3,0.4 -0.7,0.7 -1,1.1 -0.1,0.1 -0.2,0.3 -0.3,0.4 -0.3,0.4 -0.7,0.8 -1,1.1 -0.1,0.2 -0.3,0.3 -0.4,0.5 -0.3,0.3 -0.6,0.7 -0.8,1 -0.2,0.2 -0.3,0.4 -0.5,0.7 -0.2,0.3 -0.4,0.6 -0.7,0.9 -0.2,0.3 -0.4,0.6 -0.6,0.9 -0.2,0.2 -0.3,0.5 -0.5,0.7 0,0 0,0 0,0 0,0 0,0 0,0s0,0 0,0l-0.1,0.2c-0,0.1 -0.1,0.1 -0.1,0.2 -5.6,8.6 -11.6,23.3 -15.2,36.4 -0,0.1 -0.1,0.2 -0.1,0.3 -0,0 -0,0.1 -0,0.1 -0.1,0.4 -0.2,0.8 -0.3,1.1 -0,0.2 -0.1,0.3 -0.1,0.4 -0.1,0.4 -0.2,0.7 -0.3,1.1 -0,0.2 -0.1,0.3 -0.1,0.5 -0.1,0.3 -0.2,0.7 -0.3,1 -0,0.2 -0.1,0.4 -0.1,0.6 -0.1,0.3 -0.2,0.6 -0.2,0.9 -0.1,0.2 -0.1,0.4 -0.1,0.7 -0.1,0.3 -0.1,0.5 -0.2,0.8 -0.1,0.2 -0.1,0.5 -0.1,0.7 -0.1,0.3 -0.1,0.5 -0.2,0.8 -0.1,0.2 -0.1,0.5 -0.1,0.7 -0,0.3 -0.1,0.5 -0.1,0.7h0l-0,0.1 -0.1,0.3s0,0 0,0l-0,0.2c-0.1,0.7 -0.2,1.3 -0.3,2 0,0.1 -0,0.1 -0,0.2 -0.1,0.6 -0.2,1.3 -0.3,1.9 -0,0.2 -0,0.3 -0.1,0.5 -0.1,0.6 -0.1,1.1 -0.2,1.7 -0,0.2 -0,0.4 -0.1,0.6 -0.1,0.5 -0.1,1.1 -0.1,1.6 -0,0.3 -0,0.5 -0.1,0.8 -0,0.5 -0.1,1 -0.1,1.5 -0,0.3 -0,0.6 -0,0.9 -0,0.5 -0.1,0.9 -0.1,1.4 -0,0.4 -0,0.7 -0,1.1 -0,0.4 -0,0.9 -0,1.3 0,0.4 0,0.8 -0,1.2 0,0.4 -0,0.9 -0,1.3 0,7.6 0.6,15 1.8,21.2 0.2,1.1 0.4,2.2 0.6,3.3 0.1,0.5 0.2,1 0.4,1.5 0.3,1 0.5,1.9 0.8,2.8 0.1,0.4 0.3,0.8 0.4,1.2 0,0 0,0 0,0 0,0.1 0.1,0.2 0.1,0.3 0,0.1 0.1,0.2 0.1,0.2l0.1,0.3c1.7,4.6 4,8.1 6.5,10.2 1.1,0.9 2.3,1.6 3.4,1.8l0.4,0.1c0.3,0 0.5,0.1 0.8,0.1 0.1,0 0.2,-0 0.2,-0 0.2,0 0.3,0 0.4,-0 0.1,-0 0.2,-0.1 0.3,-0.1 0.2,-0 0.3,-0.1 0.4,-0.1 0.5,-0.2 0.9,-0.4 1.4,-0.8 0.2,-0.2 0.4,-0.4 0.6,-0.6h0s0,0 0,0c0,-0 0.1,-0.1 0.1,-0.1 0,0 0,0 0,0 0,0 0,-0 0,-0 0.1,-0.1 0.3,-0.3 0.4,-0.4 0.2,-0.2 0.3,-0.3 0.5,-0.4 0.2,-0.1 0.3,-0.2 0.4,-0.3 0.2,-0.2 0.4,-0.3 0.6,-0.4 0.1,-0.1 0.2,-0.1 0.3,-0.2 0.3,-0.2 0.5,-0.3 0.8,-0.5 0.1,-0 0.1,-0 0.1,-0.1 0.3,-0.2 0.6,-0.3 1,-0.4 1.2,-0.5 2.5,-0.8 3.8,-0.9 0.1,0 0.3,0 0.4,0 0.3,-0 0.6,-0 0.9,-0 0,0 0,0 0,0 2,0.1 3.9,0.6 5.7,1.5 0.9,0.4 1.8,1 2.6,1.6 0.8,0.6 1.6,1.4 2.3,2.2 0.2,0.2 0.4,0.5 0.8,0.7l0.3,0.2c0.2,0.2 0.4,0.3 0.6,0.4 0.1,0.1 0.2,0.1 0.3,0.2l0.1,0s0,0 0,0c0.1,0 0.2,0.1 0.2,0.1 0.2,0.1 0.3,0.2 0.4,0.2 0,0 0.1,0 0.1,0.1 0.1,0.1 0.2,0.1 0.3,0.1 0.1,0 0.1,0 0.2,0.1 0.2,0.1 0.4,0.2 0.6,0.2l0.2,0.1c0.1,0 0.2,0.1 0.3,0.1 0.3,0.1 0.6,0.2 1,0.2l0.4,0.1c0.5,0.1 1,0.2 1.5,0.2 0.1,0 0.2,0 0.3,0 0.4,0 0.9,0.1 1.3,0.1h0.5c0.3,-0 0.6,-0 0.8,-0 0.1,0 0.2,0 0.3,-0 0.2,-0 0.5,-0 0.7,-0.1 0.3,-0 0.6,-0.1 0.9,-0.1s0.6,-0.1 1,-0.1l0.3,-0c0.6,-0.1 1.2,-0.2 1.9,-0.4l0.4,-0.1c0.6,-0.2 1.3,-0.3 1.9,-0.5l0.3,-0.1h0c0.2,-0.1 0.4,-0.2 0.6,-0.2 0.2,-0.1 0.3,-0.1 0.5,-0.2 0.1,-0 0.1,-0.1 0.2,-0.1 0,0 0,0 0,0 0.3,-0.1 0.5,-0.2 0.8,-0.3 0,0 0,-0 0.1,-0 0,0 0,-0 0.1,-0 0.6,-0.2 1.3,-0.5 2,-0.8l0.3,-0.1h0c0.7,-0.3 1.4,-0.6 2,-1l0.4,-0.2c0.7,-0.4 1.4,-0.8 2,-1.1l0.3,-0.2c0.5,-0.3 0.9,-0.6 1.4,-0.9Z</string>
</resources>