<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:paddingHorizontal="16dp"
    android:paddingTop="16dp"
    tools:context=".ui.record.RecordFragment">

    <TextView
        android:id="@+id/tv_record_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record_title"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_record_sub_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/record_sub_title"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_record_title" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_record_chart"
        android:layout_width="match_parent"
        android:layout_height="250dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/shape_gray_stroke_10_radius"
        android:elevation="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_record_sub_title">

        <TextView
            android:id="@+id/tv_chart_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_chart_empty"
            android:textColor="@color/middle_gray"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/layout_record_chart" />

        <FrameLayout
            android:id="@+id/graphContainer"
            android:layout_width="match_parent"
            android:layout_height="320dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_record_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_record_chart">

        <ImageView
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_record_empty"
            app:layout_constraintBottom_toTopOf="@id/tv_record_empty"
            app:layout_constraintEnd_toEndOf="@id/tv_record_empty"
            app:layout_constraintStart_toStartOf="@id/tv_record_empty" />

        <TextView
            android:id="@+id/tv_record_empty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/record_list_empty"
            android:textColor="@color/button_gray"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_record"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:visibility="invisible"
        android:layout_marginTop="24dp"
        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/layout_record_chart"
        app:spanCount="2"
        tools:listitem="@layout/item_record"
        tools:visibility="visible" />

</androidx.constraintlayout.widget.ConstraintLayout>